@@ -22,3 +22,6 @@ src/lwnetdelay/lwnetdelay
 src/lwnetrouterd/config.cpp
 src/lwnetrouterd/config.h
 src/lwnetrouterd/lwnetrouterd
+src/tests/config.cpp
+src/tests/config.h
+src/tests/gpio_delay_test
